# aystm

./: .gitignore  db.dmm  pyproject.toml
data_extraction/: data_processing.ipynb  demo_annotate.ipynb  experimental_analysis.ipynb  face_mesh.py  train_speaking.ipynb
tests/: test_data_extraction.py
