[tool.poetry]
name = "data-extraction"
version = "0.1.0"
description = ""
authors = ["paul-shuvo <shuvo.k.paul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mediapipe = "^0.8.9"
protobuf3-to-dict = "^0.1.5"
numpy = "^1.22.1"
jupyter = "^1.0.0"
jupyter-core = "^4.9.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
